# agent-factory

./: .env.example  .generated_views.sql  .gitignore  AGENTS.md  CHANGELOG.md  CHANGELOG_23_06_2026.md  CLAUDE.md  GLOBAL_CONTEXT.md  LICENSE  MEMORIA.md  PROVA_DE_VIDA.txt  README.md  README_AUTONOMIA.md  TODO.md  _check_html.py  _dashboard_snapshot.txt  _debug2.py  _debug_logs.py  _result_utf8.txt  _run_dashboard.py  _run_epic002.py  _run_prioritization.py  _server_stderr.txt  _server_stdout.txt  _smoke_dash.py  _start_dash.py  _test_coord.py  _test_coord2.py  _test_zen_simple.py  call_objective.py  check_blocks.py  check_dashboard.py  docker-compose.yml  docker-start.ps1  extract_best_html.py  fix_html.py  gen_sql.py  gen_sql_batches.py  generate_solar_code.py  install_startup.ps1  (+96 more)
dashboard-react/: index.html  package-lock.json  package.json  start-dev.ps1
docs/: GUIA_INICIALIZACAO.md  LLM_INSTRUCOES.md  MODELS_CAPABILITIES.md  backlog.md  console-afp-requisitos.md  console-afp-schema.md  modelos-locais-benchmark.md  proxima-missao.md
examples/: agente_demo.yaml  agente_demo_handlers.py  local_multi_model_squad.py  pipline_cache_demo.py  simple_pipeline.py
scripts/: add_issues_to_board.py  analisar_impacto.py  move_issue.py  ollama_gpu_optimize.ps1  query_issue.py  start_agent_factory.ps1  start_agent_factory.sh  start_agent_factory_macos.sh
src/: StandardBaseAgent.py  __init__.py  dashboard.py  loader.py  monitor.py  project_discovery.py  registry.py  tray_manager.py
tests/: test_all.py  test_context_manager.py  test_event_pipeline.py  test_loader.py  (+2 more)
(+195 files in other folders)
