[project]
name = "agent-factory"
version = "2.0.0"
description = "Framework reutilizável para orquestração de agentes autônomos com segregação de projetos"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Rafael Drummond" }
]
keywords = ["agent", "orchestrator", "langgraph", "ai", "automation", "factory"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]

dependencies = [
    "langgraph>=0.2.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
llm = [
    "groq>=0.4.0",
    "ollama>=0.1.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --tb=short"
